gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test19661.d
version https://git-lfs.github.com/spec/v1
oid sha256:b73073a8f96dea2f8ff5dd9f5e44c4f7f0ec68dc509c468edbd96d69c72ef5da
size 478
